# veripost

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-CONTEXT.md  01-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  main.py
app/api/routes/: health.py  packages.py  parsing.py  posts.py
app/core/: constants.py
app/core/ai/: copilot.py  prompts.py
app/core/models/: post_processor.py
app/core/parsing/: __init__.py  base.py  camworks.py  delmia.py  mastercam.py
app/db/: database.py  models.py
app/services/: post_service.py  storage.py
app/workers/: __init__.py  celery_app.py  tasks.py
docs/: architecture.md
tests/: test_api.py  test_parsing.py
